--- a/web/index.html
+++ b/web/index.html
@@ -33,12 +33,12 @@
                             <a href="index.html" class="brand-logo center"><img src="res/logo.png" alt="Tatulum"></a>
                             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                             <ul id="nav-mobile" class="left hide-on-med-and-down">
-                                <li><a href="series.html"><i class="material-icons left">search</i>Find Series</a></li>
+                                <li><a href="series.jsp"><i class="material-icons left">search</i>Find Series</a></li>
                                 <li><a href="watched.html"><i class="material-icons left">visibility</i>Watched Series</a></li>
                                 <li><a href="team.html"><i class="material-icons left">group</i>Team</a></li>
                             </ul>
                             <ul class="side-nav" id="mobile-demo">
-                                <li><a href="series.html">Find Series</a></li>
+                                <li><a href="series.jsp">Find Series</a></li>
                                 <li><a href="watched.html">Watched Series</a></li>
                                 <li><a href="team.html">Team</a></li>
                             </ul>
