--- a/web/spec.html
+++ b/web/spec.html
@@ -52,7 +52,11 @@
                 </div>
                 <div class="col s9">
                     <div class="card-panel">
-                        <span class="blue-text text-darken-2">This is a card panel with dark blue text</span>
+                        <h5 class="truncate">One Piece</h5>
+                        <hr>
+                        <span>
+                            "One Piece" animation is based on the successful comic by Eiichiro Oda. The comic has sold more than 260 million copies. The success doesn't stop; the One Piece animation series is in its top 5 TV ratings for kids programs in Japan for past few years and the series' most recent feature film title "One Piece Film Z" which was released on December 2012 has gathered 5.6 million viewers so far. The success goes beyond borders; receives high popularity on animation at terrestrial channel in Taiwan, no.1 rating on animation at a DTT channel in France, received high popularity among age 3-13 on a terrestrial channel in Germany in year 2010. The animation series has been broadcasted in many parts of the world: USA, UK, Australia, France, Spain, Portugal, Germany, Italy, Greece, Turkey, Israel, South Korea, Taiwan, China, Hong Kong, Philippine, Thailand, Singapore, Malaysia, Indonesia, Ecuador, Nicaragua, Chile, Mexico, Brazil, and etc.
+                        </span>
                     </div>
                 </div>
             </div>
